--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.0.6",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
