--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
     "react-bootstrap-carousel": "^4.1.1",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
